<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".WelcomeFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:text="@string/jeu_du_morpion"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="@font/hog_world"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="100dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/round_50px">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joueur_1"
                android:layout_marginHorizontal="15dp"
                android:padding="15dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@color/couleur_joueur1"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:alpha="0.7"
                />

            <EditText
                android:id="@+id/nameJoueur1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:minWidth="150dp"
                android:hint="@string/fanny"
                android:fontFamily="sans-serif-light"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="50dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cross_50px">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joueur_2"
                android:layout_marginHorizontal="15dp"
                android:padding="15dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@color/couleur_joueur2"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:alpha="0.7"
                />

            <EditText
                android:id="@+id/nameJoueur2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:minWidth="150dp"
                android:hint="@string/lucie"
                android:fontFamily="sans-serif-light"
                />

        </LinearLayout>

        <Button
            android:id="@+id/buttonJoueur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="50dp"
            android:paddingHorizontal="24dp"
            android:textSize="20sp"
            android:backgroundTint="@color/black"
            android:text="@string/jouer"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:id="@+id/tvPolitiqueConfidentialite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politique_de_confidentialit"
            android:autoLink="web"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

</FrameLayout>