<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/jeu_du_morpion"
        android:background="@color/blue_background"
        android:textColor="@color/white"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="50dp">
        <TextView
            android:id="@+id/textViewNomJoueur2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/fanny"
            android:layout_marginHorizontal="20dp"
            android:padding="15dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/rouge_joueur1"
            />
        <TextView
            android:id="@+id/textViewNomJoueur1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/lucie"
            android:layout_marginHorizontal="20dp"
            android:padding="15dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/bleu_joueur2"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="0dp"
        >
        <!-- Ligne 1 -->
        <ImageButton
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cross"
            android:src="@drawable/encadre"
            android:backgroundTint="@color/white"
            />
        <ImageButton
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cross"
            android:src="@drawable/encadre"
            android:backgroundTint="@color/white"
            android:layout_toEndOf="@+id/button_1"
            />
        <ImageButton
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cross"
            android:src="@drawable/encadre"
            android:backgroundTint="@color/white"
            android:layout_toEndOf="@+id/button_2"
            />

        <!-- Ligne 2 -->
        <ImageButton
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cross"
            android:src="@drawable/encadre"
            android:backgroundTint="@color/white"
            android:layout_below="@+id/button_1"
            />
        <ImageButton
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cross"
            android:src="@drawable/encadre"
            android:backgroundTint="@color/white"
            android:layout_toEndOf ="@+id/button_4"
            android:layout_below="@id/button_2"
            />
        <ImageButton
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cross"
            android:src="@drawable/encadre"
            android:backgroundTint="@color/white"
            android:layout_toEndOf="@+id/button_5"
            android:layout_below="@id/button_3"
            />
        <!-- Ligne 3 -->
        <ImageButton
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cross"
            android:src="@drawable/encadre"
            android:backgroundTint="@color/white"
            android:layout_below="@+id/button_4"
            />
        <ImageButton
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cross"
            android:src="@drawable/encadre"
            android:backgroundTint="@color/white"
            android:layout_toEndOf="@id/button_7"
            android:layout_below="@+id/button_5"
            />
        <ImageButton
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cross"
            android:src="@drawable/encadre"
            android:backgroundTint="@color/white"
            android:layout_toEndOf="@id/button_8"
            android:layout_below="@+id/button_6"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/buttonRejouer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:paddingHorizontal="24dp"
        android:textSize="20sp"
        android:backgroundTint="@color/blue_background"
        android:text="@string/rejouer"/>

</LinearLayout>